<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.details.ArticleDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="Title"
                    android:padding="@dimen/dim10"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:transitionName="title" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim10"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

                <EditText
                    android:id="@+id/etAbstract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/label_desc"
                    android:padding="@dimen/dim10"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dim10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_type"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    android:transitionName="type" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dim10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_tagby"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvByline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dim10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_section"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dim10">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/label_date"
                    android:textColor="@color/cl_gray"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/cl_gray_text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim200"
                android:layout_margin="@dimen/dim10"
                android:scaleType="fitCenter" />

            <TextView
                android:id="@+id/tvCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:clickable="true"
                android:padding="@dimen/dim10"
                android:textColor="@color/cl_gray_text"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
